wordpress-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-wp
  name: test-wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-wp
  template:
    metadata:
      labels:
        app: test-wp
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: test-wp-db
        - name: WORDPRESS_DB_USER
          value: root
        - name: WORDPRESS_DB_PASSWORD
          value: test@123
        - name: WORDPRESS_DB_NAME
          value: test
        image: wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
