mysql-svv-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-database
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
