mysql-svv-database2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-wp-db
spec:
  ports:
  - name: tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: test-wp-db
  type: LoadBalancer
