sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mysql-service
spec:
  selector:
    app: my-wordpress
  ports:
    - port: 3306
