mongo-express-nodeport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wordpress.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
  - host: http://54.204.166.175:3100/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-svc
            port:
              number: 8081
